force-app/main/default/objects/KYC__c/KYC__c.object-meta.xml
<CustomObject>
    <label>KYC</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KYC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>