force-app/main/default/objects/KYC__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>KYC</relationshipLabel>
    <relationshipName>KYC</relationshipName>
    <type>Lookup</type>
</CustomField>