force-app/main/default/objects/KYC__c/fields/acName__c.field-meta.xml
<CustomField>
    <fullName>acName__c</fullName>
    <label>AcName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>