force-app/main/default/objects/KYC__c/fields/acNo__c.field-meta.xml
<CustomField>
    <fullName>acNo__c</fullName>
    <label>AcNo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>