force-app/main/default/objects/KYC__c/fields/Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Address_Type__c</fullName>
    <label>Address Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>