force-app/main/default/objects/KYC__c/fields/addressLine1__c.field-meta.xml
<CustomField>
    <fullName>addressLine1__c</fullName>
    <label>AddressLine1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>