force-app/main/default/objects/KYC__c/fields/age__c.field-meta.xml
<CustomField>
    <fullName>age__c</fullName>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>