force-app/main/default/objects/KYC__c/fields/API_Logger__c.field-meta.xml
<CustomField>
    <fullName>API_Logger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>API Logger</label>
    <referenceTo>API_Logger__c</referenceTo>
    <relationshipLabel>KYC</relationshipLabel>
    <relationshipName>KYC</relationshipName>
    <type>Lookup</type>
</CustomField>