force-app/main/default/objects/KYC__c/fields/applicationDate__c.field-meta.xml
<CustomField>
    <fullName>applicationDate__c</fullName>
    <label>ApplicationDate</label>
    <type>Date</type>
</CustomField>