force-app/main/default/objects/KYC__c/fields/Bill_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Issue_Date__c</fullName>
    <label>Bill Issue Date</label>
    <type>Date</type>
</CustomField>