force-app/main/default/objects/KYC__c/fields/Bill_No__c.field-meta.xml
<CustomField>
    <fullName>Bill_No__c</fullName>
    <label>Bill No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>