force-app/main/default/objects/KYC__c/fields/Black_List_Status__c.field-meta.xml
<CustomField>
    <fullName>Black_List_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Black List Status</label>
    <type>Checkbox</type>
</CustomField>