force-app/main/default/objects/KYC__c/fields/bloodGroup__c.field-meta.xml
<CustomField>
    <fullName>bloodGroup__c</fullName>
    <label>BloodGroup</label>
    <length>40</length>
    <type>Text</type>
</CustomField>