force-app/main/default/objects/KYC__c/fields/Body_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Body_Type_Description__c</fullName>
    <label>Body Type Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>