force-app/main/default/objects/KYC__c/fields/CompleteAddress__c.field-meta.xml
<CustomField>
    <fullName>CompleteAddress__c</fullName>
    <label>CompleteAddress</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>