force-app/main/default/objects/KYC__c/fields/Consumer_Number__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Number__c</fullName>
    <label>Consumer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>