force-app/main/default/objects/KYC__c/fields/cov__c.field-meta.xml
<CustomField>
    <fullName>cov__c</fullName>
    <label>Cov</label>
    <length>40</length>
    <type>Text</type>
</CustomField>