force-app/main/default/objects/KYC__c/fields/covDetails__c.field-meta.xml
<CustomField>
    <fullName>covDetails__c</fullName>
    <label>CovDetails</label>
    <length>40</length>
    <type>Text</type>
</CustomField>