force-app/main/default/objects/KYC__c/fields/Cubic_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Cubic_Capacity__c</fullName>
    <label>Cubic Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>