force-app/main/default/objects/KYC__c/fields/dateOfIssue__c.field-meta.xml
<CustomField>
    <fullName>dateOfIssue__c</fullName>
    <label>DateOfIssue</label>
    <type>Date</type>
</CustomField>