force-app/main/default/objects/KYC__c/fields/dateOfIssueMatch__c.field-meta.xml
<CustomField>
    <fullName>dateOfIssueMatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DateOfIssueMatch</label>
    <type>Checkbox</type>
</CustomField>