force-app/main/default/objects/KYC__c/fields/dispatchedOnFromSource__c.field-meta.xml
<CustomField>
    <fullName>dispatchedOnFromSource__c</fullName>
    <label>DispatchedOnFromSource</label>
    <type>Date</type>
</CustomField>