force-app/main/default/objects/KYC__c/fields/district__c.field-meta.xml
<CustomField>
    <fullName>district__c</fullName>
    <label>District</label>
    <length>40</length>
    <type>Text</type>
</CustomField>