force-app/main/default/objects/KYC__c/fields/dlNumber__c.field-meta.xml
<CustomField>
    <fullName>dlNumber__c</fullName>
    <label>DlNumber</label>
    <length>80</length>
    <type>Text</type>
</CustomField>