force-app/main/default/objects/KYC__c/fields/dob__c.field-meta.xml
<CustomField>
    <fullName>dob__c</fullName>
    <label>Dob</label>
    <type>Date</type>
</CustomField>