force-app/main/default/objects/KYC__c/fields/epicNo__c.field-meta.xml
<CustomField>
    <fullName>epicNo__c</fullName>
    <label>EpicNo</label>
    <length>40</length>
    <type>Text</type>
</CustomField>