force-app/main/default/objects/KYC__c/fields/father_husband__c.field-meta.xml
<CustomField>
    <fullName>father_husband__c</fullName>
    <label>Father/Husband</label>
    <length>40</length>
    <type>Text</type>
</CustomField>