force-app/main/default/objects/KYC__c/fields/Fitness_Upto__c.field-meta.xml
<CustomField>
    <fullName>Fitness_Upto__c</fullName>
    <label>Fitness Upto</label>
    <type>Date</type>
</CustomField>