force-app/main/default/objects/KYC__c/fields/Fuel_Description__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Description__c</fullName>
    <label>Fuel Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>