force-app/main/default/objects/KYC__c/fields/gender__c.field-meta.xml
<CustomField>
    <fullName>gender__c</fullName>
    <label>Gender</label>
    <length>40</length>
    <type>Text</type>
</CustomField>