force-app/main/default/objects/KYC__c/fields/Gross_Vehicle_Weight__c.field-meta.xml
<CustomField>
    <fullName>Gross_Vehicle_Weight__c</fullName>
    <label>Gross Vehicle Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>