force-app/main/default/objects/KYC__c/fields/houseNo__c.field-meta.xml
<CustomField>
    <fullName>houseNo__c</fullName>
    <label>HouseNo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>