force-app/main/default/objects/KYC__c/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <label>Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>