force-app/main/default/objects/KYC__c/fields/img__c.field-meta.xml
<CustomField>
    <fullName>img__c</fullName>
    <label>Img</label>
    <length>40</length>
    <type>Text</type>
</CustomField>