force-app/main/default/objects/KYC__c/fields/Insurance_Upto__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Upto__c</fullName>
    <label>Insurance Upto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>