force-app/main/default/objects/KYC__c/fields/isOCRDone__c.field-meta.xml
<CustomField>
    <fullName>isOCRDone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is OCR Done</label>
    <type>Checkbox</type>
</CustomField>