force-app/main/default/objects/KYC__c/fields/issueDate__c.field-meta.xml
<CustomField>
    <fullName>issueDate__c</fullName>
    <label>IssueDate</label>
    <length>40</length>
    <type>Text</type>
</CustomField>