force-app/main/default/objects/KYC__c/fields/lastUpdate__c.field-meta.xml
<CustomField>
    <fullName>lastUpdate__c</fullName>
    <label>LastUpdate</label>
    <type>Date</type>
</CustomField>