force-app/main/default/objects/KYC__c/fields/Mothers_Name__c.field-meta.xml
<CustomField>
    <fullName>Mothers_Name__c</fullName>
    <label>Mothers Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>