force-app/main/default/objects/KYC__c/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <label>Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>