force-app/main/default/objects/KYC__c/fields/nameMatch__c.field-meta.xml
<CustomField>
    <fullName>nameMatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NameMatch</label>
    <type>Checkbox</type>
</CustomField>