force-app/main/default/objects/KYC__c/fields/nameScore__c.field-meta.xml
<CustomField>
    <fullName>nameScore__c</fullName>
    <label>NameScore</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>