force-app/main/default/objects/KYC__c/fields/National_Permit_Issued_By__c.field-meta.xml
<CustomField>
    <fullName>National_Permit_Issued_By__c</fullName>
    <label>National Permit Issued By</label>
    <type>Date</type>
</CustomField>