force-app/main/default/objects/KYC__c/fields/nonTransport__c.field-meta.xml
<CustomField>
    <fullName>nonTransport__c</fullName>
    <label>NonTransport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>