force-app/main/default/objects/KYC__c/fields/partName__c.field-meta.xml
<CustomField>
    <fullName>partName__c</fullName>
    <label>PartName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>