force-app/main/default/objects/KYC__c/fields/partNo__c.field-meta.xml
<CustomField>
    <fullName>partNo__c</fullName>
    <label>PartNo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>