force-app/main/default/objects/KYC__c/fields/passportNumber__c.field-meta.xml
<CustomField>
    <fullName>passportNumber__c</fullName>
    <label>PassportNumber</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>