force-app/main/default/objects/KYC__c/fields/passportNumberFromSource__c.field-meta.xml
<CustomField>
    <fullName>passportNumberFromSource__c</fullName>
    <label>PassportNumberFromSource</label>
    <length>40</length>
    <type>Text</type>
</CustomField>