force-app/main/default/objects/KYC__c/fields/passportNumberMatch__c.field-meta.xml
<CustomField>
    <fullName>passportNumberMatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PassportNumberMatch</label>
    <type>Checkbox</type>
</CustomField>