force-app/main/default/objects/KYC__c/fields/PCName__c.field-meta.xml
<CustomField>
    <fullName>PCName__c</fullName>
    <label>PCName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>