force-app/main/default/objects/KYC__c/fields/pin__c.field-meta.xml
<CustomField>
    <fullName>pin__c</fullName>
    <label>Pin</label>
    <length>40</length>
    <type>Text</type>
</CustomField>