force-app/main/default/objects/KYC__c/fields/psLatLong__c.field-meta.xml
<CustomField>
    <fullName>psLatLong__c</fullName>
    <label>PsLatLong</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>