force-app/main/default/objects/KYC__c/fields/PSName__c.field-meta.xml
<CustomField>
    <fullName>PSName__c</fullName>
    <label>PSName</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>