force-app/main/default/objects/KYC__c/fields/PUC_Number__c.field-meta.xml
<CustomField>
    <fullName>PUC_Number__c</fullName>
    <label>PUC Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>