force-app/main/default/objects/KYC__c/fields/RC_ChasiNo__c.field-meta.xml
<CustomField>
    <fullName>RC_ChasiNo__c</fullName>
    <label>RC ChasiNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>