force-app/main/default/objects/KYC__c/fields/RC_Color__c.field-meta.xml
<CustomField>
    <fullName>RC_Color__c</fullName>
    <label>RC Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>