force-app/main/default/objects/KYC__c/fields/RC_Eng_No__c.field-meta.xml
<CustomField>
    <fullName>RC_Eng_No__c</fullName>
    <label>RC Eng No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>