force-app/main/default/objects/KYC__c/fields/RC_Financer__c.field-meta.xml
<CustomField>
    <fullName>RC_Financer__c</fullName>
    <label>RC Financer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>