force-app/main/default/objects/KYC__c/fields/RC_Maker_Desc__c.field-meta.xml
<CustomField>
    <fullName>RC_Maker_Desc__c</fullName>
    <label>RC Maker Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>