force-app/main/default/objects/KYC__c/fields/RC_Maker_Model__c.field-meta.xml
<CustomField>
    <fullName>RC_Maker_Model__c</fullName>
    <label>RC Maker Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>