force-app/main/default/objects/KYC__c/fields/RC_ManuMonthYear__c.field-meta.xml
<CustomField>
    <fullName>RC_ManuMonthYear__c</fullName>
    <label>RC ManuMonthYear</label>
    <length>255</length>
    <type>Text</type>
</CustomField>