force-app/main/default/objects/KYC__c/fields/RC_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>RC_Owner_Name__c</fullName>
    <label>RC Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>