force-app/main/default/objects/KYC__c/fields/RC_Permanent_Address__c.field-meta.xml
<CustomField>
    <fullName>RC_Permanent_Address__c</fullName>
    <label>RC Permanent Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>