force-app/main/default/objects/KYC__c/fields/RC_Present_Address__c.field-meta.xml
<CustomField>
    <fullName>RC_Present_Address__c</fullName>
    <label>RC Present Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>