force-app/main/default/objects/KYC__c/fields/RC_Registered_At__c.field-meta.xml
<CustomField>
    <fullName>RC_Registered_At__c</fullName>
    <label>RC Registered At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>