force-app/main/default/objects/KYC__c/fields/RC_Regn_Date__c.field-meta.xml
<CustomField>
    <fullName>RC_Regn_Date__c</fullName>
    <label>RC Regn Date</label>
    <type>Date</type>
</CustomField>