force-app/main/default/objects/KYC__c/fields/RC_Regn_No__c.field-meta.xml
<CustomField>
    <fullName>RC_Regn_No__c</fullName>
    <label>RC Regn No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>