force-app/main/default/objects/KYC__c/fields/RC_Valid_Upto__c.field-meta.xml
<CustomField>
    <fullName>RC_Valid_Upto__c</fullName>
    <label>RC Valid Upto</label>
    <type>Date</type>
</CustomField>