force-app/main/default/objects/KYC__c/fields/RC_Vh_Class_Desc__c.field-meta.xml
<CustomField>
    <fullName>RC_Vh_Class_Desc__c</fullName>
    <label>RC Vh Class Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>