force-app/main/default/objects/KYC__c/fields/requestedId__c.field-meta.xml
<CustomField>
    <fullName>requestedId__c</fullName>
    <label>RequestId</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>