force-app/main/default/objects/KYC__c/fields/result__c.field-meta.xml
<CustomField>
    <fullName>result__c</fullName>
    <label>Result</label>
    <length>40</length>
    <type>Text</type>
</CustomField>