force-app/main/default/objects/KYC__c/fields/rlnName__c.field-meta.xml
<CustomField>
    <fullName>rlnName__c</fullName>
    <label>RlnName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>