force-app/main/default/objects/KYC__c/fields/sectionNo__c.field-meta.xml
<CustomField>
    <fullName>sectionNo__c</fullName>
    <label>SectionNo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>