force-app/main/default/objects/KYC__c/fields/slnoInpart__c.field-meta.xml
<CustomField>
    <fullName>slnoInpart__c</fullName>
    <label>SlnoInPart</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>