force-app/main/default/objects/KYC__c/fields/stCode__c.field-meta.xml
<CustomField>
    <fullName>stCode__c</fullName>
    <label>StCode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>