force-app/main/default/objects/KYC__c/fields/surnameFromPassport__c.field-meta.xml
<CustomField>
    <fullName>surnameFromPassport__c</fullName>
    <label>SurnameFromPassport</label>
    <length>40</length>
    <type>Text</type>
</CustomField>