force-app/main/default/objects/KYC__c/fields/Transport__c.field-meta.xml
<CustomField>
    <fullName>Transport__c</fullName>
    <label>Transport</label>
    <type>Date</type>
</CustomField>