force-app/main/default/objects/KYC__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Voter Id</fullName>
            </value>
            <value>
                <fullName>Driving License</fullName>
            </value>
            <value>
                <fullName>Adhar Card</fullName>
            </value>
            <value>
                <fullName>Pan Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>