force-app/main/default/objects/KYC__c/fields/typeOfApplication__c.field-meta.xml
<CustomField>
    <fullName>typeOfApplication__c</fullName>
    <label>TypeOfApplication</label>
    <length>40</length>
    <type>Text</type>
</CustomField>