force-app/main/default/objects/KYC__c/fields/validity__c.field-meta.xml
<CustomField>
    <fullName>validity__c</fullName>
    <label>Validity</label>
    <type>Date</type>
</CustomField>