force-app/main/default/objects/KYC__c/fields/Vehicle_Catgory__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Catgory__c</fullName>
    <label>Vehicle Catgory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>