force-app/main/default/objects/KYC__c/fields/Vehicle_Class_Description__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Class_Description__c</fullName>
    <label>Vehicle Class Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>