force-app/main/default/objects/KYC__c/recordTypes/KYC_OCR.recordType-meta.xml
<RecordType>
    <fullName>KYC_OCR</fullName>
    <active>true</active>
    <description>Used For Storing Response Of KYC OCR</description>
    <label>KYC OCR</label>
</RecordType>