force-app/main/default/objects/KYC__c/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <description>Use this record type for KYC of other docs other then OCR.</description>
    <label>Other</label>
</RecordType>